--- a/package.json
+++ b/package.json
@@ -13,7 +13,19 @@
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-svg": "15.8.0",
+    "@expo/vector-icons": "^14.0.2",
+    "react-native-paper": "4.9.2",
+    "expo-linear-gradient": "~14.0.1",
+    "react-native-screens": "~4.1.0",
+    "react-native-chart-kit": "latest",
+    "@react-navigation/stack": "latest",
+    "@react-navigation/native": "latest",
+    "@react-native-picker/picker": "2.9.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0"
+  
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
