--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.11",
     "expo-camera": "^16.0.9",
+    "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
